# RaftKV

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_EN.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  README.pt-BR.md  docker-compose.yml
.claude/skills/: concurrency-auditor.md  memory-leak-finder.md
.github/workflows/: ci.yml
src/: main.rs  network.rs  raft.rs  store.rs
