[package]
name = "raftkv"
version = "0.1.0"
edition = "2021"
authors = ["Pedro Leanza <leanzapedro@gmail.com>"]
description = "A simplified, educational implementation of the Raft Consensus Algorithm powering a distributed Key-Value store."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Concorrência e async runtime
tokio = { version = "1.28", features = ["full"] }

# Serialização
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logs
log = "0.4"
env_logger = "0.10"

# Geração de números aleatórios (para timeouts de eleição)
rand = "0.8"
bincode = "1.3.3"
tokio-util = "0.7.18"
